style: Ensure gradient styles are more gradual and readable

--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -24,9 +24,12 @@
 /* Hero Style */
 .cta-btn--hero {
   background-image: linear-gradient(
-    135deg,
-    $primary-color 0%,
-    $secondary-color 100%
+    to right top,
+    $primary-color,
+    #007df2,
+    #0088f5,
+    #0992f8,
+    $secondary-color
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -42,14 +45,17 @@
   @include respond(phone) {
     background-image: none;
     border: 2px solid $secondary-color;
-    -webkit-text-fill-color: $secondary-color;
+    -webkit-text-fill-color: $primary-color;
   }
 
   &::after {
     background-image: linear-gradient(
-      135deg,
-      $primary-color 0%,
-      $secondary-color 100%
+      to right top,
+      $primary-color,
+      #007df2,
+      #0088f5,
+      #0992f8,
+      $secondary-color
     );
     // Responsive Button hero style
     @include respond(phone) {
